# rust_ircd

./: Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs  protocol.rs  server.rs
src/client/: command_parser.rs
src/protocol/: numeric_responses.rs
src/server/: server.rs  server_thread.rs
