[package]
name = "rust_ircd"
version = "0.1.0"
authors = ["Max Pollack <max@leagueside.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3.1"
clap = "2.33.0"
uuid = { version = "0.8", features = ["v4"] }
